# sp_vision_25

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  communicate.py  data.txt  datas.txt  matrix.py  readme.md  trans.py
.cache/clangd/index/: CameraApi.h.0AA37F0434347CA9.idx  CameraApi.h.3B90113B67F47743.idx  CameraApi.h.D83949099996125A.idx  CameraDefine.h.1B4F42FD866DC927.idx  CameraDefine.h.8AAB590D77FD78BD.idx  CameraDefine.h.C31E94F02CC68C91.idx  CameraParams.h.87479DB1EB261C56.idx  CameraParams.h.961B24B55F7B1F62.idx  CameraParams.h.BB6B5E3EF449D796.idx  CameraStatus.h.38D4F514A8FF45BA.idx  CameraStatus.h.8E13A09F91C35AF0.idx  CameraStatus.h.D08A5AF72C48249B.idx  DxImageProc.h.5DC3DAD55CD48829.idx  DxImageProc.h.789226D949E98DB4.idx  DxImageProc.h.FDBF05679612C97F.idx  GXDef.h.228EA4589B9451FF.idx  GXDef.h.6A405214199297D4.idx  GXErrorList.h.C61B4A6CB6BB0011.idx  GXErrorList.h.EB4B8C221821102B.idx  GxIAPI.h.17C15E5BF7BB4208.idx  GxIAPI.h.2144735F6F9053B9.idx  GxIAPI.h.D9DFF3E3FBF8F7E8.idx  GxIAPILegacy.h.771AF3396EFA9E12.idx  GxIAPILegacy.h.8033C5966034A1B8.idx  GxPixelFormat.h.65D14018DC85ADEF.idx  GxPixelFormat.h.7FA824C1B9449925.idx  MvCameraControl.h.2BC19CACAD98D488.idx  MvCameraControl.h.C07B938396E5D5C5.idx  MvCameraControl.h.CE4B3BA1FB60C1BA.idx  MvErrorDefine.h.6C1D801AD0619804.idx  MvErrorDefine.h.786D76E47809D423.idx  MvErrorDefine.h.8B1655E3B2DA6B06.idx  MvISPErrorDefine.h.0B4F9EAE2FAD2A83.idx  MvISPErrorDefine.h.3D94B84203718357.idx  MvISPErrorDefine.h.6EC3F586726C9DF0.idx  MvObsoleteInterfaces.h.271185E2EA065804.idx  MvObsoleteInterfaces.h.86B74C1AA25F2E30.idx  MvObsoleteInterfaces.h.94986C53EE7991A4.idx  ObsoleteCamParams.h.32C832ED610E668A.idx  ObsoleteCamParams.h.966FA63544D94F5F.idx  (+453 more)
assets/: yolo26.xml
assets/best_int8_openvino_model/: best.xml  metadata.yaml
assets/best_openvino_model/: best.xml  metadata.yaml
assets/little_yolo26_fp32/: best.xml  metadata.yaml
assets/repair_int8_openvino_model/: metadata.yaml  repair.xml
assets/repair_openvino_model/: metadata.yaml
assets/small_yolo26best_int8_openvino_model/: metadata.yaml  small_yolo26best.xml
calibration/: calibrate_handeye.cpp  calibrate_robotworld_handeye.cpp  capture.cpp
configs/: balance.yaml  calibration.yaml  camera.yaml  camera_test.yaml  cboard_serial.yaml  complete_template.yaml  daheng.yaml  daheng_simple.yaml  demo.yaml  standard4.yaml  standard_usb_scm.yaml  test_daheng.yaml  uav.yaml  vtune_test.yaml  web_service.yaml
docs/: AUTO_AIM_DEBUG_MPC_INTEGRATION.md  NEW_CAN_PROTOCOL.md  NEW_CAN_PROTOCOL_SUMMARY.md  STANDARD_REPROJECTION_GUIDE.md  STARTFLAG_FIX_SUMMARY.md  TIMESTAMP_SYNC_ANALYSIS.md  TRIGGER_GUIDE.md  TRIGGER_IMPLEMENTATION.md  TRIGGER_SUMMARY.md
io/: CMakeLists.txt  camera.cpp  camera.hpp  cboard.cpp  cboard.hpp  cboard_sp.cpp  cboard_sp.hpp  daheng.cpp  daheng.hpp
io/dm_imu/: dm_imu.cpp  dm_imu.hpp
io/driver/: DxImageProc.h  GXDef.h  GxIAPI.h
io/gimbal/: gimbal.cpp  gimbal.hpp
openvino_perf_report/: benchmark_average_counters_report.csv  benchmark_report.csv
py_for_debug/: info.py  serial_sniffer.py  serial_tx_view.py
src/: daheng_camera_test.cpp  sentry_debug.cpp  standard.cpp  standard_mpc.cpp  standard_sp.cpp  uav_debug.cpp  uav_debug_yolo.cpp  uav_onlyfronted_debug.cpp  yolo_detect_single.cpp
tasks/auto_aim/: CMakeLists.txt  armor.cpp  armor.hpp  armor_aimer.cpp  armor_aimer.hpp  detector.cpp  outpost_target.cpp  outpost_target.hpp  predictor.cpp  predictor.hpp  solver.cpp  solver.hpp  target.cpp  target.hpp  tracker.cpp  tracker.hpp  yolo.cpp
tasks/auto_aim/planner/: planner.cpp  planner.hpp
tasks/auto_aim/yolos/: yolo11.cpp  yolo11.hpp  yolo26.cpp  yolo26.hpp  yolov5.cpp  yolov8.cpp
tasks/auto_buff/: buff_solver.cpp
tasks/omniperception/: decider.cpp  decider.hpp
tests/: auto_aim_test.cpp  camera_detect_test.cpp  camera_planner_realtime.cpp  camera_planner_simple.cpp  camera_pnp_test.cpp  dm_test.cpp  minimum_vision_system.cpp  outpost_target_test.cpp  planner_test_debug.cpp  trigger_test.cpp
tools/: CMakeLists.txt  float16.cpp  float16.hpp  marker_publisher.cpp  marker_publisher.hpp  tf_publisher.cpp  tf_publisher.hpp  trajectory.cpp  unscented_kalman_filter.hpp
